[bug] Fix page overflow problem

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -1,10 +1,13 @@
+/* Whole page */
 .LandingPage{
-    background: url('../../static/img/background8.png');
-    /* display: flex; */
+    background: url('../../static/img/background8.png')no-repeat center / cover;
     align-items: center;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-size:100% 100%;
+    overflow:hidden;
+    filter: brightness(90%);
 }
 
 /* icon */
@@ -92,8 +95,8 @@
     flex: none;
     flex-grow: 0;
     /* margin: 0px 260px; */
-    margin-right: 200px;
-    margin-left: 200px;
+    margin-right: 30%;
+    margin-left: 30%;
 }
 
 .landingButton:hover{
